# Agentique-UI

./: .gitignore  .prettierignore  README.md  SECURITY.md  SUPPORT.md  eslint.config.mjs  index.html  package-lock.json  package.json  prettier.config.mjs  tsconfig.checkjs.json  vite.config.ts
examples/: companion-readback.valid.json  deep-link-intent.valid.json  resource-bundle.valid.json  runner-capability.valid.json  scoped-download-ticket.valid.json
release/: final-readiness.spec.json  github-release-workflow.spec.json  linux-packages.spec.json  macos-distribution.spec.json  release-docs.spec.json  release-packaging-preflight.spec.json  smoke-plan.spec.json  updater-manifest.schema.json  updater-policy.spec.json  windows-installer.spec.json
schemas/: agentique-resource-bundle.schema.json  deep-link-intent.schema.json  runner-capability.schema.json  scoped-download-ticket.schema.json  ui-companion-readback.schema.json
scripts/: check-active-native-event-transport.mjs  check-adapter-registry-manifest-trust-policy.mjs  check-artifact-receipt-binding.mjs  check-browser-automation-consent-gate.mjs  check-build-payload-budget.mjs  check-companion-integration-closeout.mjs  check-core-alignment-closeout.mjs  check-curated-adapter-lane.mjs  check-desktop-runner-validation-gate.mjs  check-diagnostics-support-bundle.mjs  check-durable-run-ledger.mjs  check-executable-capability-closeout-pack.mjs  check-execution-validation-pack.mjs  check-launch-closeout.mjs  (+83 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+414 files in other folders)
