[package]
name = "agentique-ui"
version = "0.1.0"
description = "Local-first workspace for Agentique resources."
authors = ["Agentique"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "agentique_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
